--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "ddc-hi"
 version = "0.3.0"
 authors = ["arcnmx"]
 build = "build.rs"
+edition = "2018"
 
 description = "High level DDC/CI monitor control"
 keywords = ["ddc", "mccs", "vcp", "vesa"]
@@ -22,8 +23,8 @@ edid = "^0.3.0"
 mccs = "^0.1.0"
 mccs-caps = "^0.1.0"
 mccs-db = "^0.1.1"
-failure = "^0.1.1"
 log = "^0.4.1"
+thiserror = "1.0.24"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ddc-i2c = { version = "^0.2.1", features = ["with-linux", "with-linux-enumerate"], optional = true }
