--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
           toolchain: stable
           profile: minimal
           override: true
+      - name: Install libudev
+        run: sudo apt-get install -y libudev-dev
       - uses: actions-rs/cargo@v1
         with:
           command: test
@@ -32,6 +34,8 @@ jobs:
           profile: minimal
           override: true
           components: rustfmt
+      - name: Install libudev
+        run: sudo apt-get install -y libudev-dev
       - name: Check formatting
         uses: actions-rs/cargo@v1
         with:
@@ -51,6 +55,8 @@ jobs:
           profile: minimal
           override: true
           components: clippy
+      - name: Install libudev
+        run: sudo apt-get install -y libudev-dev
       - name: Clippy Check
         uses: actions-rs/cargo@v1
         with:
@@ -69,6 +75,8 @@ jobs:
           toolchain: stable
           profile: minimal
           override: true
+      - name: Install libudev
+        run: sudo apt-get install -y libudev-dev
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
